[gd_scene load_steps=23 format=2]

[ext_resource path="res://scene/object/portal.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/character/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/map/test.png" type="Texture" id=3]
[ext_resource path="res://art/map/boss.png" type="Texture" id=4]
[ext_resource path="res://scene/map/boss.gd" type="Script" id=5]
[ext_resource path="res://scene/character/npc/computer.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/character/npc/dr_laboratory.tscn" type="PackedScene" id=7]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 64, 64, 0.144379, 64, 0.144379, 25.4647, 64, 25.4647 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 62.6678, 47.3102, 15.503, 47.0311, 15.2239, 63.4969, 0.432587, 63.776, 0.71167, 0, 62.6678, 0.703552 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 63.6857, 47.8683, 0.61322, 47.8683, 0.61322, 0.145386, 63.6857, 0.145386 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 63.5953, 48.1474, 0.801971, 48.1474, 0.801971, 0.424469, 63.5953, 0.424469 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 14.9164, 0, 15.3183, 62.7398, 0.046936, 63.5436, 0.448807, 0.448822 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 14.9164, 0.749207, 14.5145, 9.59052, 62.7398, 9.9924, 63.5436, 24.46, 0, 24.8619, 0.448807, 0.347351 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 63.4421, 24.0581, 0.347351, 24.0581, 0.347351, 9.9924, 63.4421, 9.9924 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 48.0693, 9.38957, 48.873, 25.0628, 62.5369, 25.0628, 62.5369, 62.4374, 0.647736, 62.0355, 0.647736, 9.79146 )

[sub_resource type="TileSet" id=13]
0/name = "test.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "test.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "test.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 128, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 7 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "test.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 192, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 8 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "test.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 256, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "boss.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 9 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "boss.png 6"
6/texture = ExtResource( 4 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 64, 0, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "boss.png 7"
7/texture = ExtResource( 4 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 64, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 10 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "boss.png 8"
8/texture = ExtResource( 4 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 64, 64, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 11 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "boss.png 9"
9/texture = ExtResource( 4 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 128, 64, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 12 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "boss.png 10"
10/texture = ExtResource( 4 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 192, 64, 64, 64 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 3 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "boss.png 11"
11/texture = ExtResource( 4 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 128, 0, 64, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "boss.png 12"
12/texture = ExtResource( 4 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 192, 0, 64, 64 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "boss.png 13"
13/texture = ExtResource( 4 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 256, 0, 64, 64 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "boss.png 14"
14/texture = ExtResource( 4 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 320, 0, 64, 64 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "boss.png 15"
15/texture = ExtResource( 4 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 320, 64, 64, 64 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "boss.png 16"
16/texture = ExtResource( 4 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 320, 128, 64, 64 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape = SubResource( 4 )
16/shape_one_way = false
16/shape_one_way_margin = 1.0
16/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
16/z_index = 0
17/name = "boss.png 17"
17/texture = ExtResource( 4 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 192, 128, 64, 64 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape = SubResource( 5 )
17/shape_one_way = false
17/shape_one_way_margin = 1.0
17/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
17/z_index = 0
18/name = "boss.png 18"
18/texture = ExtResource( 4 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 256, 128, 64, 64 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape = SubResource( 6 )
18/shape_one_way = false
18/shape_one_way_margin = 1.0
18/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
18/z_index = 0

[sub_resource type="Animation" id=14]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("tilemap:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.6, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ysort:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("tilemap:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ysort:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="boss" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tilemap" type="TileMap" parent="."]
tile_set = SubResource( 13 )
collision_layer = 0
collision_mask = 3
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, 65535, 0, 0, 0, 14, 0, 1, 13, 0, 2, 13, 0, 3, 13, 0, 4, 13, 0, 5, 13, 0, 6, 13, 0, 7, 13, 0, 8, 13, 0, 9, 13, 0, 10, 13, 0, 11, 13, 0, 12, 13, 0, 13, 13, 0, 14, 13, 0, 15, 536870926, 0, 16, 0, 0, 131071, 0, 0, 65536, 15, 0, 65537, 536870924, 0, 65538, 536870923, 0, 65539, 536870924, 0, 65540, 536870924, 0, 65541, 536870924, 0, 65542, 536870923, 0, 65543, 536870924, 0, 65544, 536870924, 0, 65545, 536870924, 0, 65546, 536870923, 0, 65547, 536870924, 0, 65548, 536870924, 0, 65549, 536870924, 0, 65550, 536870923, 0, 65551, 536870927, 0, 65552, 0, 0, 196607, 0, 0, 131072, 16, 0, 131073, 536870930, 0, 131074, 536870929, 0, 131075, 536870929, 0, 131076, 536870929, 0, 131077, 536870930, 0, 131078, 536870929, 0, 131079, 536870929, 0, 131080, 536870929, 0, 131081, 536870929, 0, 131082, 536870929, 0, 131083, 536870929, 0, 131084, 536870930, 0, 131085, 536870929, 0, 131086, 536870929, 0, 131087, 536870928, 0, 131088, 0, 0, 262143, 0, 0, 196608, 5, 0, 196609, 1073741830, 0, 196610, 1073741830, 0, 196611, 1073741830, 0, 196612, 1073741830, 0, 196613, 1073741830, 0, 196614, 1073741830, 0, 196615, 1073741830, 0, 196616, 1073741830, 0, 196617, 1073741830, 0, 196618, 1073741830, 0, 196619, 1073741830, 0, 196620, 1073741830, 0, 196621, 1073741830, 0, 196622, 1073741830, 0, 196623, 536870917, 0, 196624, 0, 0, 327679, 0, 0, 262144, 5, 0, 262145, 1073741830, 0, 262146, 1073741830, 0, 262147, 1073741830, 0, 262148, 1073741830, 0, 262149, 1073741830, 0, 262150, 1073741830, 0, 262151, 1073741830, 0, 262152, 1073741830, 0, 262153, 1073741830, 0, 262154, 1073741830, 0, 262155, 1073741830, 0, 262156, 1073741830, 0, 262157, 1073741830, 0, 262158, 1073741830, 0, 262159, 536870917, 0, 262160, 0, 0, 393215, 0, 0, 327680, 5, 0, 327681, 1073741830, 0, 327682, 1073741830, 0, 327683, 1073741830, 0, 327684, 1073741830, 0, 327685, 1073741830, 0, 327686, 1073741830, 0, 327687, 1073741830, 0, 327688, 1073741830, 0, 327689, 1073741830, 0, 327690, 1073741830, 0, 327691, 1073741830, 0, 327692, 1073741830, 0, 327693, 1073741830, 0, 327694, 1073741830, 0, 327695, 536870917, 0, 327696, 0, 0, 458751, 0, 0, 393216, 5, 0, 393217, 1073741830, 0, 393218, 1073741830, 0, 393219, 1073741830, 0, 393220, 1073741830, 0, 393221, 1073741830, 0, 393222, 1073741830, 0, 393223, 1073741830, 0, 393224, 1073741830, 0, 393225, 1073741830, 0, 393226, 1073741830, 0, 393227, 1073741830, 0, 393228, 1073741830, 0, 393229, 1073741830, 0, 393230, 1073741830, 0, 393231, 536870917, 0, 393232, 0, 0, 524287, 0, 0, 458752, 5, 0, 458753, 1073741830, 0, 458754, 1073741830, 0, 458755, 1073741830, 0, 458756, 1073741830, 0, 458757, 1073741830, 0, 458758, 1073741830, 0, 458759, 1073741830, 0, 458760, 1073741830, 0, 458761, 1073741830, 0, 458762, 1073741830, 0, 458763, 1073741830, 0, 458764, 1073741830, 0, 458765, 1073741830, 0, 458766, 1073741830, 0, 458767, 536870917, 0, 458768, 0, 0, 589823, 0, 0, 524288, 5, 0, 524289, 1073741830, 0, 524290, 1073741830, 0, 524291, 1073741830, 0, 524292, 1073741830, 0, 524293, 1073741830, 0, 524294, 1073741830, 0, 524295, 1073741830, 0, 524296, 1073741830, 0, 524297, 1073741830, 0, 524298, 1073741830, 0, 524299, 1073741830, 0, 524300, 1073741830, 0, 524301, 1073741830, 0, 524302, 1073741830, 0, 524303, 536870917, 0, 524304, 0, 0, 655359, 0, 0, 589824, 7, 0, 589825, 8, 0, 589826, 8, 0, 589827, 8, 0, 589828, 8, 0, 589829, 8, 0, 589830, 9, 0, 589831, 536870922, 0, 589832, 536870922, 0, 589833, 536870921, 0, 589834, 536870920, 0, 589835, 536870920, 0, 589836, 536870920, 0, 589837, 536870920, 0, 589838, 536870920, 0, 589839, 536870919, 0, 589840, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0 )

[node name="portal_desert" parent="tilemap" instance=ExtResource( 1 )]
position = Vector2( 517, 581 )

[node name="ysort" type="YSort" parent="."]

[node name="player" parent="ysort" instance=ExtResource( 2 )]
position = Vector2( 515.291, 525.763 )

[node name="dr_compilador" parent="ysort" instance=ExtResource( 7 )]
position = Vector2( 724.407, 489.994 )

[node name="computer" parent="ysort" instance=ExtResource( 6 )]
position = Vector2( 861.078, 188.361 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/transition_in = SubResource( 14 )
anims/transition_out = SubResource( 15 )
[connection signal="body_entered" from="tilemap/portal_desert" to="." method="_on_portal_desert_body_entered"]
[connection signal="chat_entered" from="ysort/dr_compilador" to="." method="_on_dr_compilador_chat_entered"]
[connection signal="chat_exited" from="ysort/dr_compilador" to="." method="_on_dr_compilador_chat_exited"]
[connection signal="chat_entered" from="ysort/computer" to="." method="_on_computer_chat_entered"]
[connection signal="chat_exited" from="ysort/computer" to="." method="_on_computer_chat_exited"]
[connection signal="animation_finished" from="animation" to="." method="_on_animation_finished"]
[connection signal="animation_started" from="animation" to="." method="_on_animation_started"]
